html/wp-content/themes/twentytwelve/wpsc-default.css
/*
Theme Name: Default Theme
Theme URI: http://instinct.co.nz
Description: Default Theme
Version: 3.5
Author: Roy Ho
Author URI: http://instinct.co.nz
*/

/*
 * If you delete this file, you can expect your WP e-Commerce installation to break in some manner
 * to create your own theme copy, and paste this file, change the names and alter to your tastes
*/
/*-----UTILITY-----*/
.group:after {
	content:" ";
	display:block;
	height:0;
	clear:both;
	visibility:hidden;
}
/*-----IE SPECIFIC STYLESHEET-----*/

/*-----UTILITY-----*/
/* for IE6 */
* html .group {
	height:1%;
}

/* for IE7 */
*:first-childhtml .group {
	min-height:1px;
}

/*-----GENERAL-----*/

#default_products_page_container .imagecol img, #list_view_products_page_container img, #grid_view_products_page_container img {
	margin-bottom:5px;
	padding:0;
}

.wpsc_hidden{
	display:none;
}

.wpsc_product_title {
	text-decoration: none;
}

/*-----DEFAULT PRODUCT DISPLAY-----*/
#default_products_page_container {
	width:100%;	
	position:relative;
	line-height:1.2em;
}

#default_products_page_container .wpsc_page_numbers_top {
	margin-bottom:20px;	
}

#default_products_page_container .wpsc_page_numbers_bottom {
	margin-top:20px;	
}

.wpsc_category_grid_item {
	text-align: center;
	background: #EFEFEF;
	border: 1px solid #CCC;
	margin:10px;
	text-decoration: none;
}

.wpsc_category_grid_item .item_no_image {
	color:#000;
}

.wpsc_category_details {
	width: 640px;	
	margin-bottom: 20px;
}

.wpsc_category_details img {
	background: white;
	-webkit-box-shadow: -2px 2px 3px rgba(50, 50, 50, 0.4);
	-moz-box-shadow: -2px 2px 3px rgba(50, 50, 50, 0.4);
	box-shadow: -2px 2px 3px rgba(50, 50, 50, 0.4);
	padding: 10px;	
}

.wpsc_category_details_description {
	margin-left: 5px;
	margin-top: 10px;
}


#default_products_page_container .wpsc_page_numbers_top a:link, #default_products_page_container .wpsc_page_numbers_top a:visited, #default_products_page_container .wpsc_page_numbers_bottom a:link, #default_products_page_container .wpsc_page_numbers_bottom a:visited {
	padding:5px 4px;

}


#default_products_page_container .wpsc_page_numbers_top a:hover, #default_products_page_container .wpsc_page_numbers_top a:active, #default_products_page_container .wpsc_page_numbers_bottom a:hover, #default_products_page_container .wpsc_page_numbers_bottom a:active {

}

#default_products_page_container .wpsc_page_numbers_top span.current, #default_products_page_container .wpsc_page_numbers_top span.current, #default_products_page_container .wpsc_page_numbers_bottom span.current, #default_products_page_container .wpsc_page_numbers_bottom span.current {
	padding:5px 4px;
}

.default_product_display {
	margin:10px 15px 10px 5px;
	position:relative;
	float: left;
	width: 205px;
	-webkit-box-shadow: -2px 2px 3px rgba(50, 50, 50, 0.4);
	-moz-box-shadow: -2px 2px 3px rgba(50, 50, 50, 0.4);
	box-shadow: -2px 2px 3px rgba(50, 50, 50, 0.4);
}

.default_product_display .imagecol {

	text-align: right;
	display: table-cell;
	vertical-align: middle;
	min-height: 50px;
	height: 100%;
	overflow: auto;

}

.default_product_display .imagecol img.product_image {
	background-color:#efefef;	
}

.default_product_display .imagecol img.no-image, #content .default_product_display .imagecol img.no-image {
	background-color:#EFEFEF;
	display:block;
}

.default_product_display .productcol {
	vertical-align: middle;
	min-height: 100px;
	background-color: white;
	padding-left: 10px;
	padding-top: 5px;
	border: 1px 1px 1px 0px solid #000000;
}

.default_product_display h2.prodtitle, #content .default_product_display h2.prodtitle {
	margin:0 0 0 0;
	line-height:1;
	clear:none;
	background-color:white;
	padding-left:10px;
}

.default_product_display span.sale {
	position:absolute;
	top:-10px;
	left:-10px;
	text-indent:-9999px;
	display:block;
}

.default_product_display .wpsc_description, #content .default_product_display .wpsc_description {
	font-size:13px;	
	height: 26px;
	border-bottom: solid 1px #9e9e9e;
	margin-bottom: 5px;
	margin-right: 5px;
}

.default_product_display .additional_description, #content .default_product_display .additional_description {
	font-size:13px;	
	line-height:1.4em;
	margin:0;
}

.default_product_display .additional_description_container {
	margin:20px 0;	
}

.default_product_display a.additional_description_link:link, .default_product_display a.additional_description_link:visited {
	text-decoration:underline;
	color:#0062ce;
	margin-left:5px;
}

.default_product_display a.additional_description_link:hover, .default_product_display a.additional_description_link:active {
	text-decoration:none;
}

.default_product_display .additional_description {
	display:none;	
}

.default_product_display form.product_form fieldset, #content .default_product_display form.product_form fieldset {
	border: none;
	padding: 0px;
}

.default_product_display form.product_form fieldset legend, #content .default_product_display form.product_form fieldset legend {
	font-size:18px;
	font-weight: normal;
	padding:0px;
}

.default_product_display .wpsc_variation_forms {
	padding:2px;	
	margin-bottom:10px;
}

.wpsc_select_variation{
	position:relative;
}

.default_product_display .wpsc_variation_forms table, #content .default_product_display .wpsc_variation_forms table, .default_product_display .wpsc_variation_forms table tr, #content .default_product_display .wpsc_variation_forms table tr, .default_product_display .wpsc_variation_forms table td, #content .default_product_display .wpsc_variation_forms table td {
	border:none;
	border-collapse:collapse;	
	margin:0;
}

.default_product_display .wpsc_variation_forms table td.col1, #content .default_product_display .wpsc_variation_forms table tr td.col1 {
	width:10%;	
	text-align:left;
	margin:0;
	padding:2px;
}

.default_product_display .wpsc_variation_forms table td.col2, #content .default_product_display .wpsc_variation_forms table tr td.col2 {
	width:80%;	
	text-align:left;
	margin:0;
	padding:2px;
}
/* ... */

